fixed blurred navigation probelm, added about me section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,11 @@ header {
     width: 100%;
 }
 
+header.box-shadow {
+    -webkit-box-shadow: 0 10px 30px -10px rgba(2, 12, 27, 0.25);
+    box-shadow: 0 10px 30px -10px rgba(2, 12, 27, 0.25);
+}
+
 header .desktop-only {
     display: none;
 }
@@ -56,13 +61,14 @@ header .desktop-only {
     display: flex;
     height: 30px;
     width: 36px;
+    position: relative;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    z-index: 100;
+    z-index: 10;
 }
 
 .navbar .mobile-only .hamburger .bar {
@@ -141,7 +147,8 @@ header .desktop-only {
     height: 100%;
 }
 
-.mobile-nav {
+.mobile-only .mobile-nav {
+    box-shadow: -10px 0px 30px -15px rgba(2, 12, 27, 0.7);
     background-color: var(--main-bg-color);
     display: flex;
     align-items: center;
@@ -152,22 +159,19 @@ header .desktop-only {
     /* Off Canvas Nav */
     position: fixed;
     top: 0;
+    bottom: 0;
     right: 0;
     height: 100vh;
     width: min(75vw, 400px);
     outline: 0px;
     transform: translateX(100vw);
-    visibility: hidden;
-    transition: all 0.3s ease-in-out;
-    z-index: 90;
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    z-index: 9;
 }
 
 .mobile-nav.open {
-    box-shadow: -10px 0px 30px -15px rgba(2, 12, 27, 0.7);
-    background-color: var(--main-bg-color);
     transform: translateX(0vw);
-    visibility: visible;
-    z-index: 0;
+    z-index: 9;
 }
 
 .mobile-nav .nav-links {
@@ -185,6 +189,8 @@ header .desktop-only {
     counter-increment: nav-counter 1;
     margin: 0px auto 10px;
     padding: 3px 20px 20px;
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
 }
 
 .mobile-nav .nav-links .nav-link::before {
@@ -194,14 +200,13 @@ header .desktop-only {
 
 main {
     padding: 0 25px;
-    transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-body.blur main > * {
-    filter: blur(5px) brightness(0.7);
-    pointer-events: none;
-    user-select: none;
+main.blur,
+main.blur > * {
+    position: relative;
+    filter: blur(5px);
     z-index: -1;
 }
 
@@ -247,6 +252,41 @@ body.blur main > * {
     text-decoration: none;
     cursor: pointer;
     margin-top: 50px;
+}
+
+#about {
+    padding: 60px 0;
+}
+
+.numbered-heading {
+    font-size: clamp(26px, 5vw, 32px);
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin: 10px 0 40px;
+    width: 100%;
+    white-space: nowrap;
+}
+
+.numbered-heading::before {
+    margin-bottom: -3px;
+    margin-right: 5px;
+    position: relative;
+    bottom: -2px;
+    counter-increment: section-title 1;
+    content: "0" counter(section-title) ".";
+    color: var(--accent-color);
+    font-size: clamp(16px, 3vw, 20px);
+}
+
+.numbered-heading::after {
+    content: "";
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 1px;
+    margin-left: 10px;
+    background-color: var(--main-font-color);
 }
 
 ul {
